# clip_cpp-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
clip_cpp-sys/: Cargo.toml  build.rs  wrapper.h
examples/: batch.rs  simple.rs
src/: image.rs  lib.rs  model.rs  params.rs
