[package]
name = "clip_cpp-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "clip.cpp"
repository = "https://github.com/ionosnetworks/clip_cpp-rs"
license = "MIT"
description = "Native bindings to clip.cpp"
keywords = ["clip.cpp", "monatis"]
categories = ["external-ffi-bindings"]

[dependencies]

[build-dependencies]
cmake = { version = "0.1" }
bindgen = "0.65.1"

[lib]
name = "clip_cpp_sys"
path = "src/lib.rs"

[features]
default = ["avx", "avx2", "fma", "f16c", "accelerate"]
static = []
build_tests = []
build_examples = []
build_image_search = []
build_shared_libs = []
native = []
lto = []
all_warnings = []
all_warnings_3rd_party = []
gprof = []
sanitize_thread = []
sanitize_address = []
sanitize_undefined = []
avx = []
avx2 = []
fma = []
avx512 = []
avx512_vbmi = []
avx512_vnni = []
f16c = []
accelerate = []
openblas = []
ggml_cublas = []
ggml_static = []
